refactor: Update branding from Torrentio to Mirador across static files and error messages

--- a/addon/static/landing.html
+++ b/addon/static/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Torrentio - Stremio Addon</title>
+    <title>Mirador - Stremio Addon</title>
     <link rel="shortcut icon" id="favicon" href="https://dl.strem.io/addon-logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
