refactor: Enhance configuration handling and API key integration

--- a/addon/static/landing.html
+++ b/addon/static/landing.html
@@ -335,7 +335,7 @@
         <div id="dApiKey">
             <label class="label" for="iApiKey">API Key (Required):</label>
             <input type="text" id="iApiKey" onchange="generateInstallLink()" class="input" placeholder="Enter your API key" required>
-            <p style="font-size: 0.9rem; margin-bottom: 1rem; color: #b0b0b0;">This addon requires an API key for authentication. Contact the administrator to get one.</p>
+            <p style="font-size: 0.9rem; margin-bottom: 1rem; color: #b0b0b0;">This addon requires an API key for authentication. The key will be stored securely in your Stremio configuration. Contact the administrator to get one.</p>
         </div>
 
         <div class="separator"></div>
